# test-fini-crash

./: CMakeLists.txt  Dockerfile  README.md  bisect.py  setup.py
src/_cds/: _cdsmodule.c
src/_cds/clinic/: _cdsmodule.c.h
